2005-05-09  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-private-utils.c:
	(_gnome_vfs_url_show_using_handler_with_env):
	Properly expand "%s" occuring in arguments. 
	Fixes bug #302992.

2005-05-09  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-xfer.c: (copy_directory):
	Restore preservation of atime, mtime and permissions broken
	by the setgid directories patch. 
	Fixes bug #303470.

2005-05-08  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-cdrom.c: (_gnome_vfs_get_cdrom_type):
	Default to CDS_NO_INFO on any not sepcially handled system.
	Fixes bug #171495. Oath From Michael Banck <mbanck@debian.org>.

2005-05-08  Christian Kellner  <gicmo@gnome.org>

	* configure.in: Check for sem_wait in -lsem
	* libgnomevfs/gnome-vfs-cdrom.c: (_gnome_vfs_get_cdrom_type):
	* libgnomevfs/gnome-vfs-volume-ops.c: (mount_unmount_thread):
	* modules/cdda-method.c:
	Build fixes for GNU/k*BSD. Fixes bug #150568.
	Patch from Robert Millan <rmh@debian.org>.

2005-05-08  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-volume-ops.c: (mount_unmount_thread):
	* modules/cdda-method.c:
	Build fixes for DragonFly. Fixes bug #170530. 
	Patch from Yonetani Tomokazu <qhwt+gnome@les.ath.cx>

2005-05-08  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-i18n.h: removed.
	* doc/Makefile.am:
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-cdrom.c:
	* libgnomevfs/gnome-vfs-configuration.c:
	* libgnomevfs/gnome-vfs-filesystem-type.c:
	* libgnomevfs/gnome-vfs-hal-mounts.c:
	* libgnomevfs/gnome-vfs-init.c:
	* libgnomevfs/gnome-vfs-job.c:
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	* libgnomevfs/gnome-vfs-mime-info.c:
	* libgnomevfs/gnome-vfs-parse-ls.c:
	* libgnomevfs/gnome-vfs-result.c:
	* libgnomevfs/gnome-vfs-utils.c:
	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c:
	* libgnomevfs/gnome-vfs-volume-ops.c:
	* modules/computer-method.c:
	* modules/dns-sd-method.c:
	* modules/file-method.c:
	* modules/network-method.c: